# Kai

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  OPTIMIZATION-PLAN.md  README.md  migrate_to_workers.py  pyproject.toml
.cursor/rules/: kai.md  secretary-agent.md
Kai/custom_agents/: README.md  example_agent.py
Kai/custom_prompts/: reviewer.md
kai.egg-info/: PKG-INFO  SOURCES.txt
secretary/: __init__.py  __main__.py  agent_config.py  agent_loop.py  agent_paths.py  agent_registry.py  agent_runner.py  agents.py  boss.py  cli.py  config.py  dashboard.py  i18n.py  kai_scanner.py  log_formatter.py  prompt_builder.py  recycler.py  report_viewer.py  scanner.py  secretary_agent.py  settings.py  skills.py  worker.py  workers.py
secretary/agent_types/: README.md  __init__.py  base.py  boss.py  recycler.py  secretary.py  worker.py
secretary/docs/: optimization_research_prompt_memory.md
secretary/prompts/: boss.md  boss_continue.md  recycler.md  recycler_continue.md  secretary.md  secretary_continue.md  worker_continue.md  worker_first_round.md  worker_refine.md
secretary/ui/: __init__.py  common.py  dashboard.py  report_viewer.py
secretary_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
secretary_pkg/: agent_runner.py  cli.py  config.py  recycler.py  scanner.py  secretary_agent.py
skills/: analysis.md  debug.md  evolving.md
