[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kai"
version = "0.1.0"
description = "Kai — 基于 Cursor Agent 的自动化任务编排系统"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0",
]

[project.scripts]
kai = "secretary.cli:main"
# 兼容旧名
secretary = "secretary.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secretary*"]

[tool.setuptools.package-data]
secretary = ["prompts/*.md"]
